--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
     def room_version = "2.3.0"
@@ -51,6 +49,10 @@ dependencies {
     def retrofit_version = "2.9.0"
     def Interceptor_version = "4.7.2"
     def Glide_version = "4.12.0"
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
