--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.wasim.videosharedtransition">
+	package="com.wasim.exoplayerlist">
 
 	<uses-permission android:name="android.permission.INTERNET" />
-
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 	<application
-		android:name=".presentation.App"
+		android:name="com.wasim.exoplayerlist.presentation.App"
 		android:allowBackup="true"
 		android:hardwareAccelerated="true"
 		android:icon="@mipmap/ic_launcher"
@@ -14,8 +15,9 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.VideoSharedTransition">
 		<activity
-			android:name=".presentation.MainActivity"
-			android:exported="true">
+			android:name="com.wasim.exoplayerlist.presentation.MainActivity"
+			android:exported="true"
+			android:configChanges="keyboardHidden|orientation|screenSize">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
